--- a/projets-web/site-test-001/index.html
+++ b/projets-web/site-test-001/index.html
@@ -5,22 +5,11 @@
     <title>Ma page de test</title>
     <link href="styles/style.css" rel="stylesheet" type="text/css">
   </head>
-  <body>
+  <body> 	
 
-  	<style>
-  		.backgroundGradient {
-        background: linear-gradient(to bottom, white, #FF1493);
-        color: white;
-        height: 150px;
-    }
-    </style>
     <div class="backgroundGradient">
-    <h1>RON SPEARS</h1>
-</div>
-
-
-
-
+    	<h1>RON SPEARS OFFICIAL</h1>
+	</div>
 
   	<img src="Images/RonSpears.jpg" alt="RonSpears">
   	<img src="Images/RonSpears.jpg" alt="RonSpears">
