commit 02/09/19 suite cv_online

--- a/projets-web/Cours_OCR_CV_en_ligne/OCR_onlineCV1.html
+++ b/projets-web/Cours_OCR_CV_en_ligne/OCR_onlineCV1.html
@@ -2,26 +2,27 @@
 <html>
     <head>
         <meta charset="utf-8" />
+        <link href="ocr_cv.css" rel="stylesheet" type="text/css"> 
         <title>Mon CV en ligne</title>
     </head>
 
     <body>
         <h1>Sterling ARCHER</h1>
-            <p>Nom de code "Duchesse". Espion le plus dangereux au monde. Amateur de wisky et de femmes.</p>
-            <p>
+            <p class="intro">Nom de code "Duchesse". Espion le plus dangereux au monde. Amateur de wisky et de femmes.</p>
+            <p class="photoProf">
                 <a href="images/archer.jpg"><img src="images/mini_archer.jpg" alt="photo perso pour cv" title="Cliquez pour agrandir"/></a>
             </p>
 
         <h2>Mon expérience</h2>
             <ul>
-                <li>Elevé par le majordome de ma mère.</li>
-                <li>Agence d'espionnage "ISIS"</li>
-                <li>11 saisons au plus haut niveau</li>
+                <li> Elevé par le majordome de ma mère.</li>
+                <li> Agence d'espionnage "ISIS"</li>
+                <li> 11 saisons au plus haut niveau</li>
             </ul>
         <h2>Mes compétences</h2>
             <ul>
-                <li>Expert dans tous les domaines de l'espionnage (armes, conduite, arts martiaux)</li>
-                <li>Style de vie « jet-set » rempli de sexe, d'alcool, de drogue, de voitures de sport et autres gadgets.</li>
+                <li> Expert dans tous les domaines de l'espionnage (armes, conduite, arts martiaux)</li>
+                <li> Style de vie « jet-set » rempli de sexe, d'alcool, de drogue, de voitures de sport et autres gadgets.</li>
                 <li> fan inconsidéré de Burt Reynolds.</li>
             </ul>
 
