commit 05/09/19 zozor & toggle exo

--- a/projets-web/Cours_OCR_CV_en_ligne/OCR_onlineCV1.html
+++ b/projets-web/Cours_OCR_CV_en_ligne/OCR_onlineCV1.html
@@ -7,7 +7,7 @@
     </head>
 
     <body>
-        <h1>Sterling ARCHER</h1>
+        <h1><span>Sterling ARCHER</span></h1>
             <p class="intro">Nom de code "Duchesse". Espion le plus dangereux au monde. Amateur de wisky et de femmes.</p>
             <p class="photoProf">
                 <a href="images/archer.jpg"><img src="images/mini_archer.jpg" alt="photo perso pour cv" title="Cliquez pour agrandir"/></a>
