commit ocr cv 01 + test flexbox

--- a/projets-web/Cours_OCR_CV_en_ligne/OCR_onlineCV1.html
+++ b/projets-web/Cours_OCR_CV_en_ligne/OCR_onlineCV1.html
@@ -1,32 +1,59 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8" />
-        <link href="ocr_cv.css" rel="stylesheet" type="text/css"> 
-        <title>Mon CV en ligne</title>
-    </head>
 
-    <body>
-        <h1><span>Sterling ARCHER</span></h1>
-            <p class="intro">Nom de code "Duchesse". Espion le plus dangereux au monde. Amateur de wisky et de femmes.</p>
-            <p class="photoProf">
-                <a href="images/archer.jpg"><img src="images/mini_archer.jpg" alt="photo perso pour cv" title="Cliquez pour agrandir"/></a>
-            </p>
+<head>
+    <meta charset="utf-8" />
+    <link href="ocr_cv.css" rel="stylesheet" type="text/css">
+    <title>Mon CV en ligne</title>
+</head>
 
-        <h2>Mon expérience</h2>
+<body>
+    
+            <header>
+                <h1><span>Sterling ARCHER</span></h1>
+                <p class="intro">Nom de code "Duchesse". Espion le plus dangereux au monde. Amateur de wisky et de
+                    femmes.</p>
+                <p class="photoProf">
+                    <a href="images/archer.jpg"><img src="images/mini_archer.jpg" alt="photo perso pour cv"
+                    title="Cliquez pour agrandir" /></a>
+                </p>      
+            </header>
+
+
+    <div id="allPage">
+        <section id="experience">
+            <h2>Mon expérience</h2>
             <ul>
                 <li> Elevé par le majordome de ma mère.</li>
                 <li> Agence d'espionnage "ISIS"</li>
                 <li> 11 saisons au plus haut niveau</li>
             </ul>
-        <h2>Mes compétences</h2>
+        </section>
+
+        <section id="competences">
+            <h2>Mes compétences</h2>
             <ul>
                 <li> Expert dans tous les domaines de l'espionnage (armes, conduite, arts martiaux)</li>
-                <li> Style de vie « jet-set » rempli de sexe, d'alcool, de drogue, de voitures de sport et autres gadgets.</li>
+                <li> Style de vie « jet-set » rempli de sexe, d'alcool, de drogue, de voitures de sport et autres
+                    gadgets.</li>
                 <li> fan inconsidéré de Burt Reynolds.</li>
             </ul>
+        </section>
 
-        <h2>Ma formation</h2>
+        <section id="formation">
+            <h2>Ma formation</h2>
             <p>A la dure car ma maman est méchante ....</p>
-    </body>
+        </section>
+      
+
+        <section>
+                <aside>
+                    <p>bla bla bla</p>
+                </aside>
+        </section>
+
+
+    </div>
+</body>
+
 </html>
