commit 12/09/19 cv_online + flexbox

--- a/projets-web/Cours_OCR_CV_en_ligne/OCR_onlineCV1.html
+++ b/projets-web/Cours_OCR_CV_en_ligne/OCR_onlineCV1.html
@@ -3,55 +3,54 @@
 
 <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="ocr_cv.css" rel="stylesheet" type="text/css">
     <title>Mon CV en ligne</title>
 </head>
 
 <body>
-    
-            <header>
-                <h1><span>Sterling ARCHER</span></h1>
-                <p class="intro">Nom de code "Duchesse". Espion le plus dangereux au monde. Amateur de wisky et de
-                    femmes.</p>
-                <p class="photoProf">
-                    <a href="images/archer.jpg"><img src="images/mini_archer.jpg" alt="photo perso pour cv"
+    <header>
+        <h1><span>Sterling ARCHER</span></h1>
+        <p class="intro">Nom de code "Duchesse". Espion le plus dangereux au monde. Amateur de wisky et de
+            femmes.</p>
+        <p class="photoProf">
+            <a href="images/archer.jpg"><img src="images/mini_archer.jpg" alt="photo perso pour cv"
                     title="Cliquez pour agrandir" /></a>
-                </p>      
-            </header>
+        </p>
+    </header>
+
+    <section id="aside">
+        <aside>
+            <p></p>
+        </aside>
+    </section>
 
 
-    <div id="allPage">
-        <section id="experience">
+    <div id="conteneur">
+
+        <div class="experience">
             <h2>Mon expérience</h2>
             <ul>
-                <li> Elevé par le majordome de ma mère.</li>
-                <li> Agence d'espionnage "ISIS"</li>
-                <li> 11 saisons au plus haut niveau</li>
+                <li> Elevé par le majordome de ma mère.</li><br /><br />
+                <li> Agence d'espionnage "ISIS"</li><br /><br />
+                <li> 11 saisons au plus haut niveau</li><br /><br />
             </ul>
-        </section>
+        </div>
 
-        <section id="competences">
+        <div class="competences">
             <h2>Mes compétences</h2>
             <ul>
-                <li> Expert dans tous les domaines de l'espionnage (armes, conduite, arts martiaux)</li>
+                <li> Expert dans tous les domaines de l'espionnage (armes, conduite, arts martiaux)</li><br /><br />
                 <li> Style de vie « jet-set » rempli de sexe, d'alcool, de drogue, de voitures de sport et autres
-                    gadgets.</li>
-                <li> fan inconsidéré de Burt Reynolds.</li>
+                    gadgets.</li><br /><br />
+                <li> fan inconsidéré de Burt Reynolds.</li><br /><br />
             </ul>
-        </section>
+        </div>
 
-        <section id="formation">
+        <div class="formation">
             <h2>Ma formation</h2>
-            <p>A la dure car ma maman est méchante ....</p>
-        </section>
-      
-
-        <section>
-                <aside>
-                    <p>bla bla bla</p>
-                </aside>
-        </section>
-
+            <p>A la dure, car ma maman est méchante ....</p>
+        </div>
 
     </div>
 </body>
