--- a/projets-web/Cour_CRM_Bootstrap/index.html
+++ b/projets-web/Cour_CRM_Bootstrap/index.html
@@ -1,46 +1,35 @@
 <!DOCTYPE html>
-    <html lang="fr">
+<html lang="fr">
 
-    <head>
-        <title>Bootstrap template</title>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
-        <link href="index.css" rel="stylesheet">
-        <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-        <!--[if lt IE 9]>
+<head>
+    <title>Bootstrap template</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="index.css" rel="stylesheet">
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
         <![endif]-->
-    </head>
+</head>
 
-    <body>
-        <header class="entete">
-            <div class="col-md-12" style="background-color: yellow;">Entete</div>
-            <h1>Hello, world!</h1>
-        </header>
-        <nav class="menu">
-            <div class="row">
-                <div class="col-md-4" style="background-color: green;">Menu</div>
-                <div class="col-md-8" style="background-color: aqua;">??</div>
-            </div>
-        </nav>
-        <section id="section">
-            <article id="article">
+<body>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">Entete</div>
+        </div>
+    </div>
 
-            </article>
-            <aside id="aside">
+    <div class="row">
+        <div class="col-lg-4">largeur 4</div>
+        <div class="col-lg-8">largeur 8</div>
+    </div>
 
-            </aside>
-        </section>
-        <footer id="footer">
-
-        </footer>
-        
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-        <script src="bootstrap/js/bootstrap.min.js"></script>
-    </body>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="bootstrap/js/bootstrap.min.js"></script>
+</body>
 
 </html>
