commit 24/09/19 jumbotron & bootstrap

--- a/projets-web/Cours_OCR_CV_en_ligne/OCR_onlineCV1.html
+++ b/projets-web/Cours_OCR_CV_en_ligne/OCR_onlineCV1.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <div id="bloc-principal"></div>
     <header>
         <h1><span>Sterling ARCHER</span></h1>
         <p class="intro">Nom de code "Duchesse". Espion le plus dangereux au monde. Amateur de wisky et de
@@ -52,6 +53,7 @@
             <p>A la dure, car ma maman est méchante ....</p>
         </div>
 
+    </div>
     </div>
 </body>
 
