--- a/projets-web/Cour_CRM_Bootstrap/exo_menu_assoc.html
+++ b/projets-web/Cour_CRM_Bootstrap/exo_menu_assoc.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="index.css" rel="stylesheet">
-    
+
     <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" 
             integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">-->
     <!--<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">-->
@@ -22,15 +22,16 @@
 
 <body>
     <h1>menu responsive</h1>
-    <nav class="navbar navbar-default">        
-        <div class="container-fluid">
+    <nav class="navbar navbar-default">
+        <div class="container">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                    data-target="#navbar-collapse">
                     <span class="sr-only">Apparaitre/Disparaitre navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
-                    <span class="icon-bar"></span> 
-                </button>              
+                    <span class="icon-bar"></span>
+                </button>
             </div>
 
             <div class="collapse navbar-collapse" id="navbar-collapse">
@@ -50,34 +51,62 @@
         </div>
     </nav>
 
+    
+
+    <ol class="breadcrumb">
+        <li>
+            <a href="accueil.php">accueil</a>
+        </li>
+        <li class="active">
+            <a href="#">info/contact</a>
+        </li>
+    </ol>
+
     <div class="container">
-            <header class="row">
-              <div class="col-sm-12">
+        <header class="row">
+            <div class="col-sm-12">
                 Entete
-              </div>
-            </header>
-            <div class="row">
-              <nav class="col-xs-2">
+            </div>
+        </header>
+        <div class="row">
+            <nav class="col-xs-2">
                 Menu
-              </nav>
-              <section class="col-xs-10">
+            </nav>
+            <section class="col-xs-10">
                 Section
                 <div class="row">
-                  <article class="col-md-10">
-                    Article
-                  </article>
-                  <aside class="col-md-2">
-                    Aside
-                  </aside>
+                    <article class="col-md-10">
+                        Article
+                    </article>
+                    <aside class="col-md-2">
+                        Aside
+                    </aside>
                 </div>
-              </section>
-            </div>
-            <footer class="row">
-              <div class="col-sm-12">
+            </section>
+        </div>
+        <footer class="row">
+            <div class="col-sm-12">
                 Pied de page
-              </div>
-            </footer>
-          </div>
+            </div>
+        </footer>
+    </div>
+
+    <div class="jumbotron">
+        <div class="container2">
+            <h1>MON PROJET IMMOBILIER</h1>
+            <h3>Je suis un bref paragraphe explicatif vous <br /> donnant fortement envie d'aller plus loin</h3>
+            <p class="lead">
+                <a href="recherche.html" class="btn btn-lg btn-primary" role="button">En Savoir Plus</a>
+            </p>
+        </div>
+    </div>
+
+    <!--Correction jumbotron
+    <div class="jumbotron">
+        <h1>MON PROJET IMMOBILIER</h1>
+        <p>Je suis un bref paragraphe explicatif vous donnant fortement envie d'aller plus loin</p>
+        <a class="btn btn-lg btn-primary" href="recherche.html" role="button">En savoir plus</a>
+    </div>-->
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
