--- a/projets-web/Cour_CRM_Bootstrap/exo_menu_assoc.html
+++ b/projets-web/Cour_CRM_Bootstrap/exo_menu_assoc.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="index.css" rel="stylesheet">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
 
     <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" 
             integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">-->
@@ -51,7 +52,7 @@
         </div>
     </nav>
 
-    
+
 
     <ol class="breadcrumb">
         <li>
@@ -107,6 +108,137 @@
         <p>Je suis un bref paragraphe explicatif vous donnant fortement envie d'aller plus loin</p>
         <a class="btn btn-lg btn-primary" href="recherche.html" role="button">En savoir plus</a>
     </div>-->
+
+
+
+    <form class="form">
+        <div class="form-group">
+            <label for="exampleInputEmail1">Email address</label>
+            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+                placeholder="Enter email">
+            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+        </div>
+        <div class="form-group">
+            <label for="exampleInputPassword1">Password</label>
+            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+        </div>
+        <div class="form-check">
+            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+            <label class="form-check-label" for="exampleCheck1">Check me out</label>
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button></br></br></br></br>
+    </form>
+
+
+
+    <div class="form-check" id="checkPerso">
+        <input class="form-check-input" type="checkbox" name="exampleRadios" id="materialChecked2" value="option1"
+            checked>
+        <label class="form-check-label" for="materialChecked2">
+            Default radio
+        </label>
+    </div>
+    <div class="form-check" id="checkPerso">
+        <input class="form-check-input" type="checkbox" name="exampleRadios" id="materialChecked2" value="option2">
+        <label class="form-check-label" for="materialChecked2">
+            Second default radio
+        </label>
+    </div>
+    <div class="form-check" id="checkPerso">
+        <input class="form-check-input" type="checkbox" name="exampleRadios" id="materialChecked2" value="option3">
+        <label class="form-check-label" for="materialChecked2">
+            Disabled radio
+        </label>
+    </div>
+
+
+
+
+    
+    <div class="container">
+        <h3>Bootstrap image checkbox(multiple)</h3>
+        <div class="col-xs-4 col-sm-3 col-md-2 nopad text-center">
+            <label class="image-checkbox">
+                <img class="img-responsive" src="choix_abrisV2.jpg" />
+                <input type="checkbox" name="image[]" value="" />
+                <i class="fa fa-check hidden"></i>
+            </label>
+        </div>
+        <div class="col-xs-4 col-sm-3 col-md-2 nopad text-center">
+            <label class="image-checkbox">
+                <img class="img-responsive" src="choixvehicule.jpg" />
+                <input type="checkbox" name="image[]" value="" />
+                <i class="fa fa-check hidden"></i>
+            </label>
+        </div>
+        <div class="col-xs-4 col-sm-3 col-md-2 nopad text-center">
+            <label class="image-checkbox">
+                <img class="img-responsive" src="couvert2.jpg" />
+                <input type="checkbox" name="image[]" value="" />
+                <i class="fa fa-check hidden"></i>
+            </label>
+        </div>
+    </div>
+
+    <script type="text/javascript">
+        $(".image-checkbox").each(function () {
+            if ($(this).find('input[type="checkbox"]').first().attr("checked")) {
+                $(this).addClass('image-checkbox-checked');
+            } else {
+                $(this).removeClass('image-checkbox-checked');
+            }
+        });
+
+        // sync the state to the input
+        $(".image-checkbox").on("click", function (e) {
+            $(this).toggleClass('image-checkbox-checked');
+            var $checkbox = $(this).find('input[type="checkbox"]');
+            $checkbox.prop("checked", !$checkbox.prop("checked"))
+
+            e.preventDefault();
+        });
+    </script>
+
+    <style>
+        .nopad {
+            padding-left: 0 !important;
+            padding-right: 0 !important;
+        }
+
+        /*image gallery*/
+        .image-checkbox {
+            cursor: pointer;
+            box-sizing: border-box;
+            -moz-box-sizing: border-box;
+            -webkit-box-sizing: border-box;
+            border: 4px solid transparent;
+            margin-bottom: 0;
+            outline: 0;
+        }
+
+        .image-checkbox input[type="checkbox"] {
+            display: none;
+        }
+
+        .image-checkbox-checked {
+            border-color: #4783B0;
+        }
+
+        .image-checkbox .fa {
+            position: absolute;
+            color: #4A79A3;
+            background-color: #fff;
+            padding: 10px;
+            top: 0;
+            right: 0;
+        }
+
+        .image-checkbox-checked .fa {
+            display: block !important;
+        }
+    </style>
+
+
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
