--- a/projets-web/Cour_CRM_Bootstrap/exo_menu_assoc.html
+++ b/projets-web/Cour_CRM_Bootstrap/exo_menu_assoc.html
@@ -172,12 +172,11 @@
                                         class="btn btn-primary" id="envoie">Envoyer les données</button>
                                 </div>
                             </div>
-                            </dic>
                         </div>
-
-
+                    </div>
                 </form>
                 Section
+
                 <div class="row">
                     <article class="col-md-10">
                         Article
@@ -188,6 +187,7 @@
                 </div>
             </section>
         </div>
+
         <footer class="row">
             <div class="col-sm-12">
                 Pied de page
