--- a/projets-web/Cours_OCR_Bootstrap/Activité_ocr_maison_architecte_tp/index.html
+++ b/projets-web/Cours_OCR_Bootstrap/Activité_ocr_maison_architecte_tp/index.html
@@ -29,34 +29,38 @@
   <div class="container-fluid">
 
     <header class="row">
-      <div class="jumbotron jumbotron-fluid col-lg-12">
+
+      <div class="jumbotron jumbotron-fluid col-12">
         <img class="img-responsive" src="assets/img/maison.png" alt="">
         <h1>La maison de l'architecte</h1>
       </div>
     </header>
 
-    <div class="row">
+    <div class="row col-xl-12 col-lg-12">
 
-      <nav class="col-sm-6">
-        <div class="left-side">
-          <a href="#"><img src="assets/img/city1.jpg" alt="Nos réalisations"></a>
-        </div>
-      </nav>
+      <div class="left-side col-lg-6">
+        <a href="#"><img src="assets/img/city1.jpg" class="img-fluid" alt="Nos réalisations"></a>
+      </div>
 
-      <section class="col-sm-6">
-        
-        <nav class="right">
-          <div class="right-side">
-            <a href="#"><img src="assets/img/side1.jpg" alt="Nos projets"></a>
+      <section class="col-xl-12 col-lg-6">
+
+        <div class="right col-xl-6">
+          <div class="right-side1">
+            <a href="#"><img src="assets/img/side1.jpg" alt="Nos projets"></a>         
+          </div>
+
+          <div class="right-side2 col-xl-6">
             <a href="#"><img src="assets/img/side2.jpg" alt="Notre ambition"></a>
           </div>
-        </nav>
+
+        </div>
+
       </section>
 
     </div>
 
     <footer class="footer">
-      <div class="col-lg-12">
+      <div class="col-12">
         <a class="btn btn-primary" href="#"><i class="fa fa-twitter fa-2x"></i></a>
         <a class="btn btn-primary" href="#"><i class="fa fa-facebook fa-2x"></i></a>
         <a class="btn btn-primary" href="#"><i class="fa fa-google-plus fa-2x"></i></a>
