--- a/projets-web/Francois_Mon_CvOnline/index.html
+++ b/projets-web/Francois_Mon_CvOnline/index.html
@@ -14,120 +14,11 @@
         <span class="text2"></span>
     </div>
 
+    <div class="enter">
+        <a id="rouge" type="button" href="Intro.html"><img src="images/YT.png" class="rouge">
+    </div>
 
 
-    <div class="wrapper">
-        <div class="line line1">
-            <span class="circle circle-top"></span>
-            <div class="dotted">
-                <span class="dot dot-top"></span>
-                <span class="dot dot-middle-top"></span>
-                <span class="dot dot-middle-bottom"></span>
-                <span class="dot dot-bottom"></span>
-            </div>
-            <span class="circle circle-bottom"></span>
-        </div>
-        <div class="line line2">
-            <span class="circle circle-top"></span>
-            <div class="dotted">
-                <span class="dot dot-top"></span>
-                <span class="dot dot-middle-top"></span>
-                <span class="dot dot-middle-bottom"></span>
-                <span class="dot dot-bottom"></span>
-            </div>
-            <span class="circle circle-bottom"></span>
-        </div>
-        <div class="line line3">
-            <span class="circle circle-top"></span>
-            <div class="dotted">
-                <span class="dot dot-top"></span>
-                <span class="dot dot-middle-top"></span>
-                <span class="dot dot-middle-bottom"></span>
-                <span class="dot dot-bottom"></span>
-            </div>
-            <span class="circle circle-bottom"></span>
-        </div>
-        <div class="line line4">
-            <span class="circle circle-top"></span>
-            <div class="dotted">
-                <span class="dot dot-top"></span>
-                <span class="dot dot-middle-top"></span>
-                <span class="dot dot-middle-bottom"></span>
-                <span class="dot dot-bottom"></span>
-            </div>
-            <span class="circle circle-bottom"></span>
-        </div>
-        <div class="line line5">
-            <span class="circle circle-top"></span>
-            <div class="dotted">
-                <span class="dot dot-top"></span>
-                <span class="dot dot-middle-top"></span>
-                <span class="dot dot-middle-bottom"></span>
-                <span class="dot dot-bottom"></span>
-            </div>
-            <span class="circle circle-bottom"></span>
-        </div>
-        <div class="line line6">
-            <span class="circle circle-top"></span>
-            <div class="dotted">
-                <span class="dot dot-top"></span>
-                <span class="dot dot-middle-top"></span>
-                <span class="dot dot-middle-bottom"></span>
-                <span class="dot dot-bottom"></span>
-            </div>
-            <span class="circle circle-bottom"></span>
-        </div>
-        <div class="line line7">
-            <span class="circle circle-top"></span>
-            <div class="dotted">
-                <span class="dot dot-top"></span>
-                <span class="dot dot-middle-top"></span>
-                <span class="dot dot-middle-bottom"></span>
-                <span class="dot dot-bottom"></span>
-            </div>
-            <span class="circle circle-bottom"></span>
-        </div>
-        <div class="line line8">
-            <span class="circle circle-top"></span>
-            <div class="dotted">
-                <span class="dot dot-top"></span>
-                <span class="dot dot-middle-top"></span>
-                <span class="dot dot-middle-bottom"></span>
-                <span class="dot dot-bottom"></span>
-            </div>
-            <span class="circle circle-bottom"></span>
-        </div>
-        <div class="line line9">
-            <span class="circle circle-top"></span>
-            <div class="dotted">
-                <span class="dot dot-top"></span>
-                <span class="dot dot-middle-top"></span>
-                <span class="dot dot-middle-bottom"></span>
-                <span class="dot dot-bottom"></span>
-            </div>
-            <span class="circle circle-bottom"></span>
-        </div>
-        <div class="line line10">
-            <span class="circle circle-top"></span>
-            <div class="dotted">
-                <span class="dot dot-top"></span>
-                <span class="dot dot-middle-top"></span>
-                <span class="dot dot-middle-bottom"></span>
-                <span class="dot dot-bottom"></span>
-            </div>
-            <span class="circle circle-bottom"></span>
-        </div>
-        <div class="line line11">
-            <span class="circle circle-top"></span>
-            <div class="dotted">
-                <span class="dot dot-top"></span>
-                <span class="dot dot-middle-top"></span>
-                <span class="dot dot-middle-bottom"></span>
-                <span class="dot dot-bottom"></span>
-            </div>
-            <span class="circle circle-bottom"></span>
-        </div>
-    </div>  
 
 </body>
 
