--- a/projets-web/Demo_Solar_system_animation/index.html
+++ b/projets-web/Demo_Solar_system_animation/index.html
@@ -1,4 +1,5 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -6,6 +7,7 @@
     <title>Solar System</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="wrapper">
         <div class="sun">
@@ -15,27 +17,33 @@
             <div class="planet">
                 <div class="shadow"></div>
             </div>
-            <div class="venus">
-                <div class="planet">
-                    <div class="shadow"></div>
-                </div>
+        </div>
+        <div class="venus">
+            <div class="planet">
+                <div class="shadow"></div>
             </div>
-            <div class="earth">
-                <div class="planet">
-                    <div class="shadow"></div>
-                </div>
+        </div>
+        <div class="earth">         
+            <div class="planet">               
+                <div class="shadow"></div>
             </div>
-            <div class="mars">
-                <div class="planet">
-                    <div class="shadow"></div>
-                </div>
+        </div>
+        <div class="moon">
+            <div class="planet">
+                <div class="shadow"></div>
             </div>
-            <div class="jupiter">
-                <div class="planet">
-                    <div class="shadow"></div>
-                </div>
+        </div>
+        <div class="mars">
+            <div class="planet">
+                <div class="shadow"></div>
+            </div>
+        </div>
+        <div class="jupiter">
+            <div class="planet">
+                <div class="shadow"></div>
             </div>
         </div>
     </div>
 </body>
+
 </html>
