commit 23/10/2019 projet site01

--- a/projets-web/Demo_3d_card_flip/index.html
+++ b/projets-web/Demo_3d_card_flip/index.html
@@ -63,7 +63,8 @@
                 <h2>Un titre</h2>
                 <p><b>Coût en mana converti :</b> 0<br>
                     <b>Coût en mana :</b> {0}<br>
-                    <b>Légalité :</b> Restricted in Oldschool, Restricted in Vintage, Banned in Duel, Banned in Commander,
+                    <b>Légalité :</b> Restricted in Oldschool, Restricted in Vintage, Banned in Duel, Banned in
+                    Commander,
                     Banned in Legacy<br>
                     <b>Paquets :</b> Limited Edition Alpha, Beta, Unlimited Edition, PLUS<br>
                     <b>Illustrateurs :</b> Dan Frazier (Intl. Collectors’ Edition), PLUS<br>
@@ -101,6 +102,15 @@
             </div>
         </div>
     </div>
+    <p>
+        <div class="validator">
+            <a href="http://jigsaw.w3.org/css-validator/check/referer">
+                <img style="border:0;width:88px;height:31px" src="http://jigsaw.w3.org/css-validator/images/vcss"
+                    alt="CSS Valide !" />
+            </a>
+        </div>
+
+    </p>
 </body>
 
 </html>
