--- a/projets-web/Demo_water_filling/index.html
+++ b/projets-web/Demo_water_filling/index.html
@@ -3,11 +3,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Rain</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <title>Water filling</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="rain"></div>
-    <div class="thunder"></div>
+    <div class="loader">
+        <h1>Water</h1>
+    </div>
+    
 </body>
 </html>
