commit 25/10/2019 projet perso v03

--- a/projets-web/Demo_Site_Blanc_Montagne/page2.html
+++ b/projets-web/Demo_Site_Blanc_Montagne/page2.html
@@ -31,9 +31,11 @@
         </aside>
 
         <main>
-            <div class="logo" src="" alt=""></div>
-
-            <div class="star"></div>
+            <div class="logo">
+                    <img src="stickerHoleIn.png" />
+                    <div class="star"></div>
+                    <div class="star2"></div>
+            </div>
 
             <div class="name">
                 <h3>I'm François Lancian</h3>
