commit 30/10/2019 suite exo asp et projet perso

--- a/projets-web/Demo_Landing_Page_Design/index.html
+++ b/projets-web/Demo_Landing_Page_Design/index.html
@@ -1,23 +1,67 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Responsive landing page</title>
-    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-                rel="stylesheet">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" 
+    rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="open">
         <div class="layer"></div>
         <div class="layer"></div>
     </div>
     <section>
+        <div class="header">
+            <h2 class="logo">Your Logo</h2>
+            <ul>
+                <li>
+                    <a href="#" class="active">Home</a>
+                </li>
+                <li>
+                    <a href="#">About</a>
+                </li>
+                <li>
+                    <a href="#">Services</a>
+                </li>
+                <li>
+                    <a href="#">Our Work</a>
+                </li>
+                <li>
+                    <a href="#">Portofolio</a>
+                </li>
+                <li>
+                    <a href="#">Contact</a>
+                </li>
+            </ul>
+        </div>
         <div class="bannerText">
             <h2>Think Creative</h2><br>
             <h3>And Make Innovative Design</h3>
+            <p>Aenean ultrices condimentum arcu ac elementum.
+                Vestibulum sollicitudin aliquam pharetra.
+                Etiam varius quam et augue pulvinar, quis finibus lacus rhoncus.
+                Aliquam malesuada quam vel mi accumsan aliquam.
+                Sed tempor facilisis ipsum, nec pretium libero accumsan ac.
+                Praesent aliquam mattis odio, in ullamcorper lacus.</p>
+            <a class="read-more" href="#">Read More</a>
         </div>
+        <img src="bulb02.png" class="bulb">
+        <ul class="sci">
+            <li><a href="#"><i class="fa
+             fa-facebook"></i></a></li>
+            <li><a href="#"><i class="fa
+            fa-twitter"></i></a></li>
+            <li><a href="#"><i class="fa
+            fa-linkedin"></i></a></li>
+            <li><a href="#"><i class="fa
+            fa-instagram"></i></a></li>
+        </ul>
     </section>
 </body>
+
 </html>
